--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~5.0 || ^6.0",
-        "illuminate/cache": "~5.0 || ^6.0",
-        "illuminate/config": "~5.0 || ^6.0",
+        "illuminate/support": ">=5.0",
+        "illuminate/cache": ">=5.0",
+        "illuminate/config": ">=5.0",
         "smarty/smarty": "3.*@stable"
     },
     "autoload": {
