--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "addons/smarty",
-    "description": "This package lets you run Smarty3 on Laravel5 elegantly.",
-    "homepage": "https://www.load-page.com",
-    "keywords": ["L5", "Laravel 5", "Laravel", "Smarty", "Smarty 3", "View", "Templating"],
+    "description": "This package lets you run Smarty3 on Laravel elegantly.",
+    "homepage": "https://www.load-page.com/",
+    "keywords": ["Laravel", "Smarty", "Smarty 3", "View", "Templating"],
     "license": "MIT",
     "support": {
         "issues": "https://github.com/fly-studio/laravel-addons-smarty/issues",
